--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.3.0",
     "eslint": "^8.16.0",
     "nuxt": "3.0.0-rc.3",
     "prettier": "^2.6.2",
